[GOJHW-6]: add service functions
